--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,19 @@ publish_to: none
 environment:
   sdk: ">=3.5.0 <4.0.0"
 
-dependencies: {}
+dependencies:
+   # Essential for CLI argument parsing
+  args: ^2.4.2
 
-dev_dependencies: {}
+  # For cross-platform file path handling
+  path: ^1.8.3
+
+  # For logging with colors
+  io: ^1.0.5
+
+  # For editing YAML files
+  yaml_edit: ^2.2.3
+
+dev_dependencies:
+  lints: ^6.0.0
+  test: ^1.25.6
