--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
 
   # For editing YAML files
   yaml_edit: ^2.2.3
+  
+  # For parsing YAML files
+  yaml: ^3.1.2
 
 dev_dependencies:
   lints: ^6.0.0
