fix(example): simplify analysis_options.yaml to avoid lints dependency warning

--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,7 +1,8 @@
 # Analysis options for example directory
 # This is an example project structure, so some paths may not exist
-
-include: package:lints/recommended.yaml
+# 
+# NOTE: This file is for example purposes only.
+# In a real project, you would use the root analysis_options.yaml
 
 analyzer:
   exclude:
@@ -11,4 +12,15 @@ analyzer:
     - "**/generated/**"
     - "build/**"
     - "pubspec.yaml"  # Exclude pubspec.yaml from analysis to avoid workspace path warnings
+  
+  errors:
+    # Ignore missing import/file errors in example directory
+    # These are example files showing structure, not actual working code
+    uri_does_not_exist: ignore
+
+linter:
+  rules:
+    # Basic rules only for example files
+    avoid_print: false
+    prefer_single_quotes: true
 
